# CLabsBFU

CMakeProject1/: CMakeLists.txt
CMakeProject1/LAB_1/: LAB_1.cpp
CMakeProject1/LAB_5/: LAB_5.cpp  ReadMe.txt
CMakeProject1/LAB_6/: LAB_6_t1.cpp  LAB_6_t4.cpp
CMakeProject1/LAB_8/: CMakeLists.txt  LAB_8.h  LAB_8_t2.cpp  ReadMe.txt  line.txt
CMakeProject1/LAB_9/: LAB_9.cpp  ReadMe.txt
CMakeProject1/Semestr_1/LAB_1/: ReadMe.txt
CMakeProject1/Semestr_1/LAB_2/: LAB_2.cpp  ReadMe.txt
CMakeProject1/Semestr_1/LAB_3/: LAB_3.cpp  ReadMe.txt
CMakeProject1/Semestr_1/LAB_4/: LAB_4.cpp  ReadMe.txt
CMakeProject1/Semestr_1/LAB_5/: LAB_5.cpp
CMakeProject1/Semestr_1/LAB_6/: LAB_6_t1.cpp  LAB_6_t2.cpp  LAB_6_t3.cpp  LAB_6_t5.cpp  ReadMe.txt
CMakeProject1/Semestr_1/LAB_7/: LAB7.hpp  LAB_7.cpp  ReadMe.txt
CMakeProject1/Semestr_1/LAB_9/: LAB_9.cpp
